# rust-tutorial

./: .gitignore  rustfmt.toml
book/ch03_common-programming-concepts/branches/: Cargo.toml
book/ch03_common-programming-concepts/data-types/: Cargo.toml
book/ch03_common-programming-concepts/functions/: Cargo.toml
book/ch03_common-programming-concepts/loops/: Cargo.toml
book/ch03_common-programming-concepts/variables/: Cargo.toml
book/ch04_understanding-ownership/dangling-references/: Cargo.toml
book/ch04_understanding-ownership/multi-var-interact/: Cargo.toml
book/ch04_understanding-ownership/ownership-and-function/: Cargo.toml
book/ch04_understanding-ownership/references-and-borrowing/: Cargo.toml
book/ch04_understanding-ownership/scope/: Cargo.toml
book/ch04_understanding-ownership/slice-type/: Cargo.toml
book/ch04_understanding-ownership/string-on-heap/: Cargo.toml
book/ch05_structure-related-data/intro-demo/: Cargo.toml
book/ch05_structure-related-data/rectangles/: Cargo.toml
book/ch05_structure-related-data/tuple-struct/: Cargo.toml
book/ch06_enums-and-pattern-matching/if-let/: Cargo.toml
book/ch06_enums-and-pattern-matching/ip-addr/: Cargo.toml
book/ch06_enums-and-pattern-matching/match-us-coins/: Cargo.toml
book/ch06_enums-and-pattern-matching/message-variants/: Cargo.toml
book/ch14_cargo-and-crates-io/build-profile/: Cargo.toml
book/guessing-game/: Cargo.toml
book/guessing-game/src/: main.rs
book/hello_cargo/: Cargo.toml
book/minigrep/: Cargo.toml
book/web-server/: Cargo.toml  hello.html
hello-rust/: Cargo.toml
(+185 files in other folders)
