[package]
name = "build-profile"
version = "0.1.0"
authors = ["yuichi-morisaki <yuichi.morisaki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
#opt-level = 0   # default
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
